# tic-tac-toe-challenge

./: .coveragerc  .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  new_game.sh  play_game.sh  pyproject.toml  pytest.ini  requirements.txt  the_real_README.md
api/: handlers.py  spec.yml
game/: config.py  logic.py
storage/: __init__.py  redis.py
tests/: test_config.py  test_logic.py
